[package]
name = "sea-streamer-iggy"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Iggy Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-iggy"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "kafka", "iggy", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
async-std = { version = "1", optional = true }
env_logger = { version = "0.9", optional = true }
lazy_static = { version = "1.4" }
mac_address = { version = "1" }
iggy = { version = "0.6.203"}
sea-streamer-types = { version = "0.5", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.5", path = "../sea-streamer-runtime" }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]

[features]
test = ["anyhow", "async-std?/attributes", "tokio?/full", "env_logger"]
executables = ["anyhow", "env_logger", "clap", "runtime-tokio", "tokio/full"]
runtime-async-std = ["async-std", "sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["tokio", "sea-streamer-runtime/runtime-tokio"]

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
required-features = ["executables"]

[[bin]]
name = "producer"
path = "src/bin/producer.rs"
required-features = ["executables"]
